--- a/templates/room.html
+++ b/templates/room.html
@@ -1,3 +1,11 @@
 {% extends 'main.html' %}
 
-{% block content %}<h1>Welcome to Room</h1> <hr>{% endblock content %}
+{% block content %}<h1>Welcome to Room</h1> <hr>
+
+
+{% for room in rooms %}
+<div><h2>{{room.id}} - <a href="">{{room.name}}</a></h2></div>
+
+{% endfor %}
+
+{% endblock content %}
