--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,7 +6,7 @@
   <div>
     {% for room in rooms %}
     <div>
-      <h2>{{room.id}} - <a href="/room/{{room.id}}">{{room.name}}</a></h2>
+      <h2>{{room.id}} - <a href="{% url 'room' room.id%}">{{room.name}}</a></h2>
     </div>
     {% endfor %}
   </div>
